[package]
name = "egui-win32"
version = "0.1.0"
edition = "2021"
description = "Windows32 input handler for egui. Takes input from windows api, WndProc and converts it into egui compatible RawInput."
license = "MIT"
repository = "https://github.com/Fetch1337/egui-win32"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
windows = { version = "0.51.1", features = [
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Wdk_System_SystemInformation",
] }
clipboard-win = "5.4.1"
